--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -8,6 +8,7 @@
   -webkit-border-radius: 25px;
   border-radius: 25px;
 }
+
 .meter > span {
   display: block;
   height: 100%;
@@ -19,13 +20,16 @@
   position: relative;
   overflow: hidden;
 }
+
 .skill {
   line-height: 3.5vw;
 }
+
 .skill-bars {
   font-size: 28px;
   width: 40%;
 }
+
 .skills-container {
   display: flex;
   width: 90%;
@@ -33,18 +37,34 @@
   margin: 0px auto;
   margin-top: 2rem;
 }
+
 .skills-container > * {
   flex: 1;
   margin-bottom: 30px;
 }
+
 .skills-image > img {
   margin-left: 80px;
   max-width: 90%;
   height: auto;
 }
 
-/* Media Query */
+/* New grid for skills list */
+.skills-bar {
+  .skills-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; // فاصله بین ستون‌ها و ردیف‌ها
+  }
 
+  .skills-grid p {
+    width: calc(50% - 10px); // دو ستون
+    margin: 0;
+    padding: 5px 0;
+  }
+}
+
+/* Media Query */
 @media (max-width: 1456px) {
   .skills-bar {
     line-height: 4rem;
@@ -62,6 +82,10 @@
   .skills-bar {
     line-height: 3rem;
     margin: 20px;
+
+    .skills-grid p {
+      width: 100%; // روی موبایل یک ستون
+    }
   }
   .skills-image {
     display: none;
